--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1735,107 +1735,107 @@ stories:
   domain: http://www.vbjusa.com/
   link: https://www.vbjusa.com/opinion/columns/banking-finance-column/your-top-financial-adviser-questions-answered/
 images:
-- name: store-on-corner-store-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-constitution.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-constitution.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-constitution.png
-- name: abandonedbuildings_emily_carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_emily_carr.jpg
-- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
-- name: copper-circuit-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-car_35892468014_o.jpg
-- name: walled-garden-walled-garden-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dry-skin.jpg
-- name: subway-subway-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-post-modern.jpg
-- name: old-house-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-rainbow-festival.jpg
-- name: miamibeach-miamibeach-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-light-dali.jpg
-- name: old-gas-pumps-oldgaspumps-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gred-mash.jpg
-- name: subway-subway-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-pablo-blue.jpg
-- name: sand-hand-sand-hand-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-rainbow-festival.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-4.jpg
-- name: oldhousecars-house-old-cars-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-nazi-poster.jpg
-- name: old-barn-old-barn-1500-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
-- name: bf-skinner-roman-marcus-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-roman-marcus-looking-down.jpg
-- name: nazi-invasion-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-early-computer-bletchley.jpg
-- name: paris-paris-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crafty-painting.jpg
-- name: nazi-invasion-ellis-island-windows.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-ellis-island-windows.jpg
-- name: yosemite-yosemite-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-circuit.jpg
-- name: docks-docks-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
-- name: christianity-christianity-under-construction-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-post-modern.jpg
-- name: subway-subway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
-- name: braceros-domingo-ulloa-working-waterfront-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-working-waterfront-2.jpg
-- name: subway-subway-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purp-paper.jpg
-- name: old-school-house-old-schoolhouse-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-spagetti-accident.jpg
-- name: oldhouse-granaryfield-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-space-pizza.jpg
-- name: oldbarn-oldbarn-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-far-away.jpg
-- name: school-clouds-church-clouds-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-granite.jpg
-- name: server-cloud-server-racks-door-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
-- name: aws-s3-models-dali1.t7
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-models-dali1.t7
-- name: gypsy-wagon-gypsywagon-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-neo-instinct.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-- name: art-museum-art-museum-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-asteroids.jpg
-- name: amusement-park-amusement-park-2-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
-- name: docks-docks-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alien-goggles.jpg
-- name: oldcabin-oldcabin-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alien-goggles.jpg
-- name: liberty-back-statue-liberty-back-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-dali.jpg
-- name: bf-skinner-seattle-shipping-people-walking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-shipping-people-walking.jpg
-- name: supreme-court-supremecourt-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
-- name: white-house-lawn-white-house-window-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-dresden.jpg
-- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
-- name: braceros-domingo-ulloa-light-rail-yellow-calif.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-light-rail-yellow-calif.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-ww2-dresden.jpg
-- name: bf-skinner-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bridge-over-columbia.jpg
-- name: hollywood-building-hollywood-building-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-5.jpg
-- name: copper-circuit-subway-underground_36599191851_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-underground_36599191851_o.jpg
-- name: bf-skinner-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-desktop-laptop-chair.jpg
-- name: oldtrain-oldtrain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-creativity.jpg
-- name: aws-s3-dunes-dunes-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-1200.jpg
-- name: walled-garden-walled-garden-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
+- name: berlinwall-DSC-0084-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-sand-paper.jpg
+- name: machine-road-machine-road-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-kandinsky-bv.jpg
+- name: old-school-house-old-schoolhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-attack-planes.jpg
+- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
+- name: old-door-lock-old-door-lock-2-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-satan-red.jpg
+- name: stalin-time-surveillance-over-the-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-surveillance-over-the-city.jpg
+- name: old-house-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
+- name: old-granary-field-oldhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
+- name: nyc-flag-nycflag-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-creativity.jpg
+- name: downtown-los-angeles-downtown-la-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-attack-planes.JPG
+- name: window-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
+- name: bf-skinner-people-walking-down-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-people-walking-down-street.jpg
+- name: bf-skinner-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-dark-city-buildings.jpg
+- name: docks-docks-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-nazi-poster.jpg
+- name: beach-clouds-lifeguard-beachclouds-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dali-three.jpg
+- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
+- name: beach-rocks-beach-rocks-currents-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-ww2-color.jpg
+- name: status-berlin-status-berlin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-constitution.jpg
+- name: adam-smith-adam-smith-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colorful-blocks.jpg
+- name: la-muse-lincoln-memorial_36690528196_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-lincoln-memorial_36690528196_o.jpg
+- name: capital-battle-capitolbattle-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-deep-connections.jpg
+- name: amusement-park-amusement-park-2-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-gred-mash.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+- name: powerlines-power-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-light-dali.jpg
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
+- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+- name: old-gas-pumps-oldgaspumps-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dali-two.jpg
+- name: ellis-island-ellisisland-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-oily-mcoilface.jpg
+- name: crow-crow.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow.jpg
+- name: carry-load-carryload-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-granite.jpg
+- name: bf-skinner-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-christ-cross-chalice.jpg
+- name: art-museum-art-museum-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-constitution.jpg
+- name: nazi-invasion-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-bletchley-computer-racks.jpg
+- name: stalin-time-building-shadows-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-building-shadows-sun.jpg
+- name: oldbarn-oldbarn-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-matrix.jpg
+- name: power-lines-power-lines-empty-space-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-mucha-mult.jpg
+- name: downtheline-downtheline-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-asteroids.jpg
+- name: oldhouse-granaryfield-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-circuit.jpg
+- name: oldbarn-oldbarn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-purple-storm.jpg
+- name: catacombs-catacombs-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-wols.jpg
+- name: stalin-time-border-crossing-through-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-crossing-through-fence.jpg
+- name: downtheline-downtheline-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-monet-one.jpg
+- name: aws-s3-mountainlake-mountainlake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
+- name: dc-statue-dcstatue-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-umberto-bocc.jpg
+- name: nazi-invasion-DSC_0020.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
+- name: castle-wall-DSC-0067-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-green-zuma.JPG
+- name: meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-yellow-collage.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+- name: fence-mexico-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alien-goggles.png
 ---
 Local Home Bakers Turn Hobby Into Small Businesses.&nbsp;Larceny, Vandalism, And A Scam.&nbsp;Wisconsin City Says 'snowball Ban' Isn't Enforced.&nbsp;Blue Ridge Conservancy Preserves 1,000 Acres Of Three Top Mountain.&nbsp;Iola, Ellsworth Get Incubator Grants.&nbsp;Meet The Santa Claus Who Doesn't Celebrate Christmas.&nbsp;Bills Praise Alexander, Who Could Be Playing Final Home Game.&nbsp;Bill Of Sale Soon Required On All Vehicle Title Transfers.&nbsp;
